# crashdump_mingw

./: .gitignore  README.md
common/: crash_handler_dump.cpp  crash_handler_dump.h  crash_handler_register.cpp  crash_handler_register.h
cpp_plain/: CMakeLists.txt  Makefile  main_crasher.cpp  main_dumper.cpp
qt/crasher/: crasher.pro  main.cpp  mainwindow.h
qt/dumper/: crash_dumper.cpp  crash_dumper.h  dumper.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
